log
Thu 09 May 2024 09:15:31 PM UTC: 
 tests:  1|8
total_score: 0/70
3fb9697
Thu 09 May 2024 09:17:44 PM UTC: 
 treemap.c | 24 +++++++++++++++++++++---
 1 file changed, 21 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:51:20: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   51 |         TreeNode * parent = NULL;
      |                    ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
f650be4
Thu 09 May 2024 09:18:05 PM UTC: 
 treemap.c | 15 ---------------
 1 file changed, 15 deletions(-)
 tests:  4|7
total_score: 5/70
39c0fc9
Thu 09 May 2024 09:42:52 PM UTC: 
 treemap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
 tests:  6|6
total_score: 15/70
b1fc28f
Thu 09 May 2024 09:44:29 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|6
total_score: 15/70
b189c81
Thu 09 May 2024 09:47:58 PM UTC: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  3|7
total_score: 5/70
532d2cb
Thu 09 May 2024 09:51:31 PM UTC: 
 treemap.c | 10 +---------
 1 file changed, 1 insertion(+), 9 deletions(-)
 tests:  6|6
total_score: 15/70
69c30b2
Thu 09 May 2024 09:57:32 PM UTC: 
 treemap.c | 17 +++++++++++++----
 1 file changed, 13 insertions(+), 4 deletions(-)
 tests:  8|5
total_score: 15/70
687425f
Thu 09 May 2024 10:02:01 PM UTC: 
 treemap.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
 tests:  8|5
total_score: 15/70
49ee931
Thu 09 May 2024 10:15:01 PM UTC: 
 treemap.c | 64 +++++++++++++++++++--------------------------------------------
 1 file changed, 19 insertions(+), 45 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:64:5: error: expected expression before ‘}’ token
   64 |     }
      |     ^
treemap.c:64:5: error: ‘return’ with a value, in function returning void [-Werror=return-type]
treemap.c:48:6: note: declared here
   48 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f4e9166
Thu 09 May 2024 10:15:42 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|5
total_score: 15/70
1702277
Thu 09 May 2024 10:23:40 PM UTC: 
 treemap.c | 53 ++++++++++++++++++++++++++++++++++++++++++++++-------
 1 file changed, 46 insertions(+), 7 deletions(-)
 tests:  8|5
total_score: 15/70
0cb7702
Thu 09 May 2024 10:24:08 PM UTC: 
 treemap.c | 47 -----------------------------------------------
 1 file changed, 47 deletions(-)
 tests:  8|5
total_score: 15/70
34801c5
Fri 10 May 2024 12:36:54 AM UTC: 
 treemap.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  0|0
ff2b068
Fri 10 May 2024 12:38:52 AM UTC: 
 treemap.c | 45 ++++++++++++++++++++++++++-------------------
 1 file changed, 26 insertions(+), 19 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:110:13: error: expected expression before ‘}’ token
  110 |             }
      |             ^
Compilation failed
a993934
Fri 10 May 2024 12:41:27 AM UTC: 
 treemap.c | 29 ++++++++++++++++++++++++++++-
 1 file changed, 28 insertions(+), 1 deletion(-)
 tests:  8|5
total_score: 15/70
9d79430
Fri 10 May 2024 02:47:32 AM UTC: 
 treemap.c | 69 ++++++++++++++-------------------------------------------------
 1 file changed, 15 insertions(+), 54 deletions(-)
In file included from test.c:4:
treemap.c:128:5: error: expected identifier or ‘(’ before ‘return’
  128 |     return NULL;
      |     ^~~~~~
treemap.c:129:1: error: expected identifier or ‘(’ before ‘}’ token
  129 | }
      | ^
Compilation failed
7817374
Fri 10 May 2024 02:47:59 AM UTC: 
 treemap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  11|5
total_score: 20/70
d64c63e
Fri 10 May 2024 02:51:17 AM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
treemap.c:128:5: error: expected identifier or ‘(’ before ‘return’
  128 |     return NULL;
      |     ^~~~~~
treemap.c:129:1: error: expected identifier or ‘(’ before ‘}’ token
  129 | }
      | ^
Compilation failed
d949e49
Fri 10 May 2024 02:53:24 AM UTC: 
 treemap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  13|4
total_score: 30/70
722f1cc
Fri 10 May 2024 02:59:06 AM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  13|4
total_score: 30/70
4108738
Sun 12 May 2024 07:36:17 PM UTC: 
 treemap.c | 34 ++++++++++++++++++++++++++++++++++
 1 file changed, 34 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:109:38: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  109 |         }else if (node->parent->left = child == node){
      |                                      ^
treemap.c:109:19: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
  109 |         }else if (node->parent->left = child == node){
      |                   ^~~~
cc1: all warnings being treated as errors
Compilation failed
7916cc9
Sun 12 May 2024 07:37:17 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|4
total_score: 30/70
21bf3c6
Sun 12 May 2024 07:38:20 PM UTC: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  13|4
total_score: 30/70
e746ad1
Sun 12 May 2024 07:40:14 PM UTC: 
 treemap.c | 19 ++++++++++++-------
 1 file changed, 12 insertions(+), 7 deletions(-)
 tests:  13|4
total_score: 30/70
6002e0c
Sun 12 May 2024 07:40:34 PM UTC: 
 treemap.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  13|4
total_score: 30/70
51071a6
Sun 12 May 2024 07:48:49 PM UTC: 
 treemap.c | 23 +++++++++++++++++------
 1 file changed, 17 insertions(+), 6 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:124:9: error: ‘sucessor’ undeclared (first use in this function); did you mean ‘successor’?
  124 |     if (sucessor->parent->left == successor){
      |         ^~~~~~~~
      |         successor
treemap.c:124:9: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:127:28: error: ‘TreeNode’ has no member named ‘rigth’; did you mean ‘right’?
  127 |         successor->parent->rigth = successor->right;
      |                            ^~~~~
      |                            right
treemap.c:129:19: error: ‘TreeNode’ has no member named ‘rigth’; did you mean ‘right’?
  129 |     if(successor->rigth != NULL){
      |                   ^~~~~
      |                   right
treemap.c:130:20: error: ‘TreeNode’ has no member named ‘rigth’; did you mean ‘right’?
  130 |         successor->rigth->parent = successor->parent;
      |                    ^~~~~
      |                    right
Compilation failed
efbe144
Sun 12 May 2024 07:49:10 PM UTC: 
 treemap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  13|4
total_score: 30/70
5045247
Sun 12 May 2024 07:57:05 PM UTC: 
 treemap.c | 25 ++++++++-----------------
 1 file changed, 8 insertions(+), 17 deletions(-)
 tests:  13|4
total_score: 30/70
f787bae
Sun 12 May 2024 08:00:36 PM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  13|4
total_score: 30/70
7da0c6b
Sun 12 May 2024 08:08:17 PM UTC: 
 treemap.c | 30 ++++++++++++++++++++++++++++--
 1 file changed, 28 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:137:21: error: expected ‘)’ before ‘{’ token
  137 |     while(aux !=NULL{
      |          ~          ^
treemap.c:148:1: error: expected expression before ‘}’ token
  148 | }
      | ^
treemap.c: In function ‘upperBound’:
treemap.c:163:29: error: expected ‘;’ before ‘}’ token
  163 |             aux = aux->right
      |                             ^
      |                             ;
  164 |         }
      |         ~                    
treemap.c:166:8: error: ‘ib’ undeclared (first use in this function); did you mean ‘ub’?
  166 |     if(ib != NULL){
      |        ^~
      |        ub
treemap.c:166:8: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:167:24: error: expected ‘;’ before ‘:’ token
  167 |         return ub->pair:
      |                        ^
      |                        ;
treemap.c: In function ‘searchTreeMap’:
treemap.c:148:1: error: control reaches end of non-void function [-Werror=return-type]
  148 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
83c4290
